--- a/panels/info/cc-info-overview-panel.ui
+++ b/panels/info/cc-info-overview-panel.ui
@@ -30,28 +30,12 @@
                   <object class="GtkImage" id="system_image">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
-                    <property name="resource">/org/gnome/control-center/info/GnomeLogoVerticalMedium.svg</property>
+                    <property name="resource">/org/gnome/control-center/info/EndlessLogo.svg</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
                     <property name="fill">False</property>
                     <property name="position">0</property>
-                  </packing>
-                </child>
-                <child>
-                  <object class="GtkLabel" id="version_label">
-                    <property name="visible">True</property>
-                    <property name="can_focus">False</property>
-                    <property name="label">Version 3.0</property>
-                    <property name="selectable">True</property>
-                    <attributes>
-                      <attribute name="scale" value="1.25"/>
-                    </attributes>
-                  </object>
-                  <packing>
-                    <property name="expand">False</property>
-                    <property name="fill">False</property>
-                    <property name="position">1</property>
                   </packing>
                 </child>
                 <child>
@@ -79,12 +63,12 @@
                       </packing>
                     </child>
                     <child>
-                      <object class="GtkLabel" id="label5">
+                      <object class="GtkLabel" id="label7">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="xalign">1</property>
-                        <property name="label" translatable="yes">Memory</property>
-                        <property name="mnemonic_widget">memory_label</property>
+                        <property name="label" translatable="yes">Version</property>
+                        <property name="mnemonic_widget">version_label</property>
                         <style>
                          <class name="dim-label"/>
                         </style>
@@ -95,12 +79,12 @@
                       </packing>
                     </child>
                     <child>
-                      <object class="GtkLabel" id="label6">
+                      <object class="GtkLabel" id="label5">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="xalign">1</property>
-                        <property name="label" translatable="yes">Processor</property>
-                        <property name="mnemonic_widget">processor_label</property>
+                        <property name="label" translatable="yes">Memory</property>
+			<property name="mnemonic_widget">memory_label</property>
                         <style>
                          <class name="dim-label"/>
                         </style>
@@ -111,11 +95,12 @@
                       </packing>
                     </child>
                     <child>
-                      <object class="GtkLabel" id="label14">
+                      <object class="GtkLabel" id="label6">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="xalign">1</property>
-                        <property name="label" translatable="yes">Graphics</property>
+			<property name="label" translatable="yes">Processor</property>
+			<property name="mnemonic_widget">processor_label</property>
                         <style>
                          <class name="dim-label"/>
                         </style>
@@ -126,12 +111,11 @@
                       </packing>
                     </child>
                     <child>
-                      <object class="GtkLabel" id="label7">
+                      <object class="GtkLabel" id="label14">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="xalign">1</property>
-                        <property name="label" translatable="yes" comments="To translators: this field contains the distro name and version">OS name</property>
-                        <property name="mnemonic_widget">os_name_label</property>
+			<property name="label" translatable="yes">Graphics</property>
                         <style>
                          <class name="dim-label"/>
                         </style>
@@ -201,21 +185,21 @@
                       </packing>
                     </child>
                     <child>
-                      <object class="GtkLabel" id="memory_label">
+                      <object class="GtkLabel" id="version_label">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="ellipsize">end</property>
                         <property name="xalign">0</property>
-                        <property name="label">Unknown</property>
                         <property name="selectable">True</property>
                       </object>
                       <packing>
                         <property name="top-attach">1</property>
                         <property name="left-attach">2</property>
+			<property name="width">2</property>
                       </packing>
                     </child>
                     <child>
-                      <object class="GtkLabel" id="processor_label">
+                      <object class="GtkLabel" id="memory_label">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="ellipsize">end</property>
@@ -229,7 +213,7 @@
                       </packing>
                     </child>
                     <child>
-                      <object class="GtkLabel" id="graphics_label">
+                      <object class="GtkLabel" id="processor_label">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="ellipsize">end</property>
@@ -243,7 +227,7 @@
                       </packing>
                     </child>
                     <child>
-                      <object class="GtkLabel" id="os_name_label">
+                      <object class="GtkLabel" id="graphics_label">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="ellipsize">end</property>
