--- a/panels/user-accounts/data/user-accounts-dialog.ui
+++ b/panels/user-accounts/data/user-accounts-dialog.ui
@@ -415,6 +415,20 @@
                     <property name="height">1</property>
                   </packing>
                 </child>
+
+                <!-- App Permissions -->
+                <child>
+                  <object class="UmAppPermissions" id="app-permissions">
+                    <property name="visible">True</property>
+                  </object>
+                  <packing>
+                    <property name="left_attach">0</property>
+                    <property name="top_attach">7</property>
+                    <property name="width">3</property>
+                    <property name="height">1</property>
+                  </packing>
+                </child>
+
               </object>
             </child>
             <child>
