--- a/panels/user-accounts/data/app-permissions.ui
+++ b/panels/user-accounts/data/app-permissions.ui
@@ -27,7 +27,7 @@
       <object class="GtkLabel">
         <property name="visible">True</property>
         <property name="xalign">0.0</property>
-        <property name="label" translatable="yes">Prevent this user from opening some apps.</property>
+        <property name="label" translatable="yes">Prevent this user from opening some apps by turning them off below.</property>
         <attributes>
           <attribute name="scale" value="0.83333" />
         </attributes>
