--- a/panels/user-accounts/data/app-permissions.ui
+++ b/panels/user-accounts/data/app-permissions.ui
@@ -28,6 +28,8 @@
         <property name="visible">True</property>
         <property name="xalign">0.0</property>
         <property name="label" translatable="yes">Prevent this user from opening some apps by turning them off below.</property>
+        <property name="use-underline">True</property>
+        <property name="mnemonic-widget">listbox</property>
         <attributes>
           <attribute name="scale" value="0.83333" />
         </attributes>
@@ -93,7 +95,9 @@
           <object class="GtkLabel" id="user_installation_label">
             <property name="visible">True</property>
             <property name="xalign">1.0</property>
-            <property name="label" translatable="yes">App installation:</property>
+            <property name="label" translatable="yes">App _Installation:</property>
+            <property name="use-underline">True</property>
+            <property name="mnemonic-widget">allow_user_installation_switch</property>
             <style>
               <class name="dim-label" />
             </style>
@@ -126,7 +130,9 @@
           <object class="GtkLabel" id="system_installation_label">
             <property name="visible">True</property>
             <property name="xalign">1.0</property>
-            <property name="label" translatable="yes">Installed apps can be used by every user:</property>
+            <property name="label" translatable="yes">Install Apps for All _Users:</property>
+            <property name="use-underline">True</property>
+            <property name="mnemonic-widget">allow_system_installation_switch</property>
             <style>
               <class name="dim-label" />
             </style>
@@ -159,7 +165,9 @@
           <object class="GtkLabel" id="app_restriction_label">
             <property name="visible">True</property>
             <property name="xalign">1.0</property>
-            <property name="label" translatable="yes">Show apps suitable for:</property>
+            <property name="label" translatable="yes">Show Apps _Suitable For:</property>
+            <property name="use-underline">True</property>
+            <property name="mnemonic-widget">restriction_button</property>
             <style>
               <class name="dim-label" />
             </style>
