--- a/panels/user-accounts/data/app-permissions.ui
+++ b/panels/user-accounts/data/app-permissions.ui
@@ -28,6 +28,7 @@
         <property name="visible">True</property>
         <property name="xalign">0.0</property>
         <property name="label" translatable="yes">Prevent this user from opening some apps by turning them off below.</property>
+        <property name="wrap">True</property>
         <property name="use-underline">True</property>
         <property name="mnemonic-widget">listbox</property>
         <attributes>
@@ -96,6 +97,7 @@
             <property name="visible">True</property>
             <property name="xalign">1.0</property>
             <property name="label" translatable="yes">App _Installation:</property>
+            <property name="wrap">True</property>
             <property name="use-underline">True</property>
             <property name="mnemonic-widget">allow_user_installation_switch</property>
             <style>
@@ -131,6 +133,7 @@
             <property name="visible">True</property>
             <property name="xalign">1.0</property>
             <property name="label" translatable="yes">Install Apps for All _Users:</property>
+            <property name="wrap">True</property>
             <property name="use-underline">True</property>
             <property name="mnemonic-widget">allow_system_installation_switch</property>
             <style>
@@ -166,6 +169,7 @@
             <property name="visible">True</property>
             <property name="xalign">1.0</property>
             <property name="label" translatable="yes">Show Apps _Suitable For:</property>
+            <property name="wrap">True</property>
             <property name="use-underline">True</property>
             <property name="mnemonic-widget">restriction_button</property>
             <style>
