--- a/panels/user-accounts/data/user-accounts-dialog.ui
+++ b/panels/user-accounts/data/user-accounts-dialog.ui
@@ -441,7 +441,7 @@
             <child>
               <object class="GtkButton" id="remove-user-toolbutton">
                 <property name="visible">True</property>
-                <property name="can_focus">False</property>
+                <property name="can_focus">True</property>
                 <property name="halign">GTK_ALIGN_END</property>
                 <property name="valign">GTK_ALIGN_END</property>
                 <property name="margin_bottom">20</property>
