user-panels: Limit full name length
GNOME Settings allows limitless full names, which is
actually accepted by most of the stack but may break
GNOME Settings, GNOME Shell and other user-visible
applications that show the user names.

Limit the user full name entries to 255 characters,
which is the same value used by GNOME Initial Setup.

(cherry picked from commit e8c7c9f96db13dcb8742b339ab00e56dbf32301d)

--- a/panels/user-accounts/data/user-accounts-dialog.ui
+++ b/panels/user-accounts/data/user-accounts-dialog.ui
@@ -187,6 +187,7 @@
                     <child>
                       <object class="GtkEntry" id="full-name-entry">
                         <property name="visible">True</property>
+                        <property name="max-length">255</property>
                         <property name="width-chars">30</property>
                         <property name="max-width-chars">30</property>
                         <property name="valign">GTK_ALIGN_CENTER</property>
