--- a/panels/user-accounts/cc-app-permissions.ui
+++ b/panels/user-accounts/cc-app-permissions.ui
@@ -116,7 +116,7 @@
           <object class="GtkLabel" id="browsers_label">
             <property name="visible">True</property>
             <property name="xalign">1.0</property>
-            <property name="label" translatable="yes">Web _Browsers:</property>
+            <property name="label" translatable="yes">Web _Browsers</property>
             <property name="wrap">True</property>
             <property name="use-underline">True</property>
             <property name="mnemonic-widget">allow_web_browsers_switch</property>
@@ -169,7 +169,7 @@
           <object class="GtkLabel" id="user_installation_label">
             <property name="visible">True</property>
             <property name="xalign">1.0</property>
-            <property name="label" translatable="yes">App _Installation:</property>
+            <property name="label" translatable="yes">App _Installation</property>
             <property name="wrap">True</property>
             <property name="use-underline">True</property>
             <property name="mnemonic-widget">allow_user_installation_switch</property>
@@ -205,7 +205,7 @@
           <object class="GtkLabel" id="system_installation_label">
             <property name="visible">True</property>
             <property name="xalign">1.0</property>
-            <property name="label" translatable="yes">Install Apps for All _Users:</property>
+            <property name="label" translatable="yes">Install Apps for All _Users</property>
             <property name="wrap">True</property>
             <property name="use-underline">True</property>
             <property name="mnemonic-widget">allow_system_installation_switch</property>
@@ -241,7 +241,7 @@
           <object class="GtkLabel" id="app_restriction_label">
             <property name="visible">True</property>
             <property name="xalign">1.0</property>
-            <property name="label" translatable="yes">Show Apps _Suitable For:</property>
+            <property name="label" translatable="yes">Show Apps _Suitable For</property>
             <property name="wrap">True</property>
             <property name="use-underline">True</property>
             <property name="mnemonic-widget">restriction_button</property>
