parental controls: Set max char limit to browser section help label
Signed-off-by: Andre Moreira Magalhaes <andre@endlessm.com>

https://phabricator.endlessm.com/T27064
(cherry picked from commit eb6d9e722390de8d6275d83b8784e0fa654a4ed2)

--- a/panels/user-accounts/cc-app-permissions.ui
+++ b/panels/user-accounts/cc-app-permissions.ui
@@ -92,6 +92,7 @@
         <property name="xalign">0.0</property>
         <property name="label" translatable="yes">Prevent this user from running web browsers by turning them off below. Note that if the computer is connected to the internet, limited web content may still be available in other applications.</property>
         <property name="wrap">True</property>
+        <property name="max-width-chars">55</property>
         <property name="use-underline">True</property>
         <property name="mnemonic-widget">allow_web_browsers_switch</property>
         <attributes>
