--- a/panels/background/preview.css
+++ b/panels/background/preview.css
@@ -8,6 +8,10 @@ frame.desktop-preview image {
   color: white;
 }
 
+frame.desktop-preview .endless-icon {
+  margin-right: 5px;
+}
+
 frame.desktop-preview label {
   color: white;
   font-weight: bold;
@@ -16,7 +20,7 @@ frame.desktop-preview label {
 
 frame.lock-screen-preview {
   border: solid rgba(0, 0, 0, 0.33);
-  border-width: 10px 0 0 0;
+  border-width: 0 0 10px 0;
 }
 
 frame.lock-screen-preview label {
