--- a/panels/info-overview/cc-info-overview-panel.ui
+++ b/panels/info-overview/cc-info-overview-panel.ui
@@ -28,7 +28,7 @@
                   <object class="GtkImage">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
-                    <property name="resource">/org/gnome/control-center/info-overview/GnomeLogoVerticalMedium.svg</property>
+                    <property name="resource">/org/gnome/control-center/info-overview/EndlessLogo.svg</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -117,11 +117,11 @@
 
                     <!-- OS Name -->
                     <child>
-                      <object class="CcListRow" id="os_name_row">
+                      <object class="CcListRow" id="os_version_row">
                         <property name="visible">True</property>
                         <property name="activatable">False</property>
                         <property name="title" translatable="yes"
-                                  comments="translators: this field contains the distro name and version">OS Name</property>
+                                  comments="translators: this field contains the distro name and version">Version</property>
                       </object>
                     </child>
 
@@ -131,16 +131,6 @@
                         <property name="visible">True</property>
                         <property name="activatable">False</property>
                         <property name="title" translatable="yes">OS Type</property>
-                      </object>
-                    </child>
-
-                    <!-- GNOME Version -->
-                    <child>
-                      <object class="CcListRow" id="gnome_version_row">
-                        <property name="visible">True</property>
-                        <property name="activatable">False</property>
-                        <property name="title" translatable="yes">GNOME Version</property>
-                        <property name="secondary-label">3.0</property>
                       </object>
                     </child>
 
