--- a/panels/metrics/cc-metrics-panel.ui
+++ b/panels/metrics/cc-metrics-panel.ui
@@ -54,10 +54,10 @@
             <property name="visible">true</property>
             <property name="hscrollbar-policy">never</property>
             <child>
-              <object class="HdyColumn">
+              <object class="HdyClamp">
                 <property name="visible">True</property>
-                <property name="maximum_width">600</property>
-                <property name="linear_growth_width">400</property>
+                <property name="maximum_size">600</property>
+                <property name="tightening_threshold">400</property>
                 <property name="margin_top">32</property>
                 <property name="margin_bottom">32</property>
                 <property name="margin_start">12</property>
