--- a/panels/background/cc-background-preview.ui
+++ b/panels/background/cc-background-preview.ui
@@ -38,7 +38,7 @@
                 <property name="visible">True</property>
                 <property name="can-focus">False</property>
                 <property name="shadow-type">none</property>
-                <property name="valign">start</property>
+                <property name="valign">end</property>
                 <style>
                   <class name="desktop-preview" />
                 </style>
@@ -52,14 +52,7 @@
                       <object class="GtkLabel">
                         <property name="visible">True</property>
                         <property name="can-focus">False</property>
-                        <property name="label" translatable="yes">Activities</property>
-                      </object>
-                    </child>
-
-                    <child type="center">
-                      <object class="GtkLabel" id="desktop_clock_label">
-                        <property name="visible">True</property>
-                        <property name="can-focus">False</property>
+                        <property name="label">∞</property>
                       </object>
                     </child>
 
@@ -93,6 +86,13 @@
                             <property name="can-focus">False</property>
                             <property name="icon-name">battery-low-symbolic</property>
                             <property name="pixel-size">6</property>
+                          </object>
+                        </child>
+
+                        <child>
+                          <object class="GtkLabel" id="desktop_clock_label">
+                            <property name="visible">True</property>
+                            <property name="can-focus">False</property>
                           </object>
                         </child>
                       </object>
