--- a/panels/camera/cc-camera-panel.ui
+++ b/panels/camera/cc-camera-panel.ui
@@ -72,7 +72,7 @@
                       <object class="GtkLabel">
                         <property name="visible">true</property>
                         <property name="margin-bottom">12</property>
-                        <property name="label" translatable="yes">Use of the camera allows applications to capture photos and video. Disabling the camera may cause some applications to not function properly.</property>
+                        <property name="label" translatable="yes">Use of the camera allows applications to capture photos and video. Disabling the camera may cause some applications to not function properly. System applications can always use the camera.</property>
                         <property name="wrap">1</property>
                         <property name="max-width-chars">50</property>
                         <property name="xalign">0</property>
