--- a/panels/location/cc-location-panel.ui
+++ b/panels/location/cc-location-panel.ui
@@ -69,7 +69,7 @@
                     <child>
                       <object class="GtkLabel" id="location_description_label">
                         <property name="visible">true</property>
-                        <property name="label" translatable="yes">Location services allow applications to know your location. Using Wi-Fi and mobile broadband increases accuracy.</property>
+                        <property name="label" translatable="yes">Location services allow applications to know your location. Using Wi-Fi and mobile broadband increases accuracy. System applications can always access your location.</property>
                         <property name="wrap">1</property>
                         <property name="max-width-chars">50</property>
                         <property name="xalign">0</property>
