--- a/panels/microphone/cc-microphone-panel.ui
+++ b/panels/microphone/cc-microphone-panel.ui
@@ -72,7 +72,7 @@
                       <object class="GtkLabel">
                         <property name="visible">true</property>
                         <property name="margin-bottom">12</property>
-                        <property name="label" translatable="yes">Use of the microphone allows applications to record and listen to audio. Disabling the microphone may cause some applications to not function properly.</property>
+                        <property name="label" translatable="yes">Use of the microphone allows applications to record and listen to audio. Disabling the microphone may cause some applications to not function properly. System applications can always use the microphone.</property>
                         <property name="wrap">true</property>
                         <property name="max-width-chars">50</property>
                         <property name="xalign">0</property>
